--- a/ProjectSelector/res/values/strings.xml
+++ b/ProjectSelector/res/values/strings.xml
@@ -15,5 +15,7 @@
 	<string name="hint_assignment2button">Fragments and inter-fragment commonunication</string>	
 	<string name="ContentDescription_textDisplay">A text box for displaying content</string>	
 	<string name="title_assignment2_menuoption_back">Go back to the picture list</string>
+	<string name="text_colorblenderbutton">ColorBlender</string>	
+	<string name="hint_colorblenderbutton">An application which requests colors from the ColorPicker and has a slider to blend between them</string>	
 	
 </resources>
