in class work on 06 25

--- a/ProjectSelector/res/values/strings.xml
+++ b/ProjectSelector/res/values/strings.xml
@@ -20,5 +20,7 @@
 	<string name="description_ColorBlenderActivity">A program which uses a slider to blend two colors</string>	
 	<string name="text_inClass0623">Work done in class on 06/23</string>
 	<string name="name_inClass0623">InClass0623</string>
+	<string name="text_inClass0625">Work done in class on 06/25</string>
+	<string name="name_inClass0625">InClass0625</string>
 	
 </resources>
